force-app/main/default/objects/Student__c/fields/Alumini__c.field-meta.xml
<CustomField>
    <fullName>Alumini__c</fullName>
    <label>Alumini</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>