force-app/main/default/objects/Student__c/fields/College_Left_Date__c.field-meta.xml
<CustomField>
    <fullName>College_Left_Date__c</fullName>
    <label>College Left Date</label>
    <type>Date</type>
</CustomField>