force-app/main/default/objects/Student__c/fields/Enrolled_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Date__c</fullName>
    <label>Enrolled Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>