force-app/main/default/objects/Student__c/fields/Relieve_date__c.field-meta.xml
<CustomField>
    <fullName>Relieve_date__c</fullName>
    <label>Relieve date</label>
    <type>Date</type>
</CustomField>