force-app/main/default/objects/Student__c/fields/Total_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Total_Reviews__c</fullName>
    <description>No of reviews on student</description>
    <label>Total Reviews</label>
    <summaryForeignKey>Rating__c.Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>