force-app/main/default/objects/Student__c/validationRules/Cannot_Change_Alumni.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Alumni</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED( Alumini__c ), 
 TEXT(PRIORVALUE( Alumini__c )) = &quot;YES&quot;,
 ISPICKVAL( Alumini__c , &quot;NO&quot;))</errorConditionFormula>
    <errorDisplayField>Alumini__c</errorDisplayField>
    <errorMessage>Student Alumni status cannot be updated if student left the college.</errorMessage>
</ValidationRule>