force-app/main/default/objects/Student__c/validationRules/College_Left_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>College_Left_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL( Alumini__c , &quot;NO&quot;), NOT( ISNULL( College_Left_Date__c ) ))</errorConditionFormula>
    <errorDisplayField>College_Left_Date__c</errorDisplayField>
    <errorMessage>College left date cannot be populated, if student is not a Alumni</errorMessage>
</ValidationRule>