force-app/main/default/objects/Student__c/validationRules/Date_of_Birth_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_Birth_validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR( Date_of_Birth__c &gt; TODAY(), ((TODAY()- Date_of_Birth__c)/365) &lt; 15)</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of birth must be in Past</errorMessage>
</ValidationRule>