force-app/main/default/objects/Student__c/validationRules/Left_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Left_cannot_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISPICKVAL( Alumini__c , &quot;YES&quot;),   ISBLANK( College_Left_Date__c ) )</errorConditionFormula>
    <errorDisplayField>College_Left_Date__c</errorDisplayField>
    <errorMessage>College left date cannot be blank if student is Alumni</errorMessage>
</ValidationRule>