force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>College__c</columns>
    <columns>Department__c</columns>
    <columns>Email__c</columns>
    <columns>Alumini__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>