force-app/main/default/objects/Student__c/listViews/CSE_Students.listView-meta.xml
<ListView>
    <fullName>CSE_Students</fullName>
    <columns>NAME</columns>
    <columns>College__c</columns>
    <columns>Department__c</columns>
    <columns>Email__c</columns>
    <columns>Alumini__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>CSE</value>
    </filters>
    <label>CSE Students</label>
</ListView>